--- a/docs-2.0/backup-and-restore/nebula-br/2.compile-br.md
+++ b/docs-2.0/backup-and-restore/nebula-br/2.compile-br.md
@@ -4,7 +4,7 @@ This topic introduces the installation of BR in bare-metal deployment scenarios.
 
 ## Notes
 
-To use the BR (Enterprise Edition) tool, you need to install the NebulaGraph Agent service, which is taken as a daemon for each machine in the cluster that starts and stops the NebulaGraph service, and uploads and downloads backup files. The BR (Enterprise Edition) tool and the Agent plug-in are installed as described below.
+To use the BR (Community Edition) tool, you need to install the NebulaGraph Agent service, which is taken as a daemon for each machine in the cluster that starts and stops the NebulaGraph service, and uploads and downloads backup files. The BR (Community Edition) tool and the Agent plug-in are installed as described below.
 
 
 ## Version compatibility
