dashboard advanced config

--- a/docs-2.0/nebula-dashboard-ent/3.create-import-dashboard/1.create-cluster.md
+++ b/docs-2.0/nebula-dashboard-ent/3.create-import-dashboard/1.create-cluster.md
@@ -40,10 +40,11 @@ You can create a cluster following these steps:
 
 5. (Optional) Edit the port and HTTP port of the meta, graph, and storage services, and then click **OK**.
 
-6. Click **Create Cluster**. Make sure the configuration is correct and there is no conflict between nodes, and then click **Confirm**.
+6. (Optional) Click **Advanced Config** below to modify the service's runtime log store path, log detail level, HTTP service address, and data store path. Users can also click **Add Config** to add their own service configuration.
 
+7. Click **Create Cluster**. Make sure the configuration is correct and there is no conflict between nodes, and then click **Confirm**.
 
-7. If a cluster with the status of `installing` appears in the list on the cluster management page, you need to wait for 3 to 10 minutes until the status changes to `healthy`, that is, the cluster is created successfully. If the service status is `unhealthy`, it means that there is an abnormal service in the cluster, click **Detail** for more information.
+8. If a cluster with the status of `installing` appears in the list on the cluster management page, you need to wait for 3 to 10 minutes until the status changes to `healthy`, that is, the cluster is created successfully. If the service status is `unhealthy`, it means that there is an abnormal service in the cluster, click **Detail** for more information.
 
 ## Next to do
 
