--- a/docs-2.0/nebula-dashboard-ent/2.deploy-connect-dashboard-ent.md
+++ b/docs-2.0/nebula-dashboard-ent/2.deploy-connect-dashboard-ent.md
@@ -78,6 +78,21 @@ Before deploying Dashboard Enterprise Edition, you must do a check of these:
     PrometheusAddr: 127.0.0.1:9091 # The IP address and port of the prometheus service.
     AlertmanagerAddr: 127.0.0.1:9093 # The IP address and port of the Alertmanager service.
 
+  # Self-built Prometheus service configuration. If you are using the Prometheus service included with the software, you do not need to set these parameters.
+  # PrometheusConfig: 
+  #   Auth:   # If authentication is enabled in Prometheus, the following parameters need to be configured. AccessToken is preferred.
+  #     Username: "" # The account of the Prometheus HTTP API service.
+  #     Password: "" # The password for the account.
+  #     AccessToken: ""  # The access token of the Prometheus HTTP API service.
+  #   RuleImport:  # Configuration for remotely updating alert rules to the Prometheus service.
+  #     Enable: false  # Whether to enable remote updating.
+  #     URL: "https://xxxx/prometheus/import"  # The interface address for updating the alert rule.
+  #     Method: POST  # Update method. Only POST operations are supported.
+  #     Auth:  # If the authentication is enabled on the interface of the URL, the following parameters need to be configured. AccessToken is preferred. AccessToken is preferred.
+  #       AccessToken: ""  # The access token of the URL interface.
+  #       Username: ""  # The authentication account of the URL interface.
+  #       Password: ""  # The password for the account.
+
   # Information of the sender's Email used to invite LDAP accounts.
   Mail:
     Host: smtp.office365.com #  The SMTP server address.
@@ -290,6 +305,21 @@ sudo rpm -e <package_name>
   Proxy:
     PrometheusAddr: 127.0.0.1:9091 # The IP address and port of the prometheus service.
     AlertmanagerAddr: 127.0.0.1:9093 # The IP address and port of the Alertmanager service.
+
+  # Self-built Prometheus service configuration. If you are using the Prometheus service included with the software, you do not need to set these parameters.
+  # PrometheusConfig: 
+  #   Auth:   # If authentication is enabled in Prometheus, the following parameters need to be configured. AccessToken is preferred.
+  #     Username: "" # The account of the Prometheus HTTP API service.
+  #     Password: "" # The password for the account.
+  #     AccessToken: ""  # The access token of the Prometheus HTTP API service.
+  #   RuleImport:  # Configuration for remotely updating alert rules to the Prometheus service.
+  #     Enable: false  # Whether to enable remote updating.
+  #     URL: "https://xxxx/prometheus/import"  # The interface address for updating the alert rule.
+  #     Method: POST  # Update method. Only POST operations are supported.
+  #     Auth:  # If the authentication is enabled on the interface of the URL, the following parameters need to be configured. AccessToken is preferred. AccessToken is preferred.
+  #       AccessToken: ""  # The access token of the URL interface.
+  #       Username: ""  # The authentication account of the URL interface.
+  #       Password: ""  # The password for the account.
 
   # Information of the sender's Email used to invite LDAP accounts.
   Mail:
