--- a/docs-2.0/3.ngql-guide/9.space-statements/1.create-space.md
+++ b/docs-2.0/3.ngql-guide/9.space-statements/1.create-space.md
@@ -16,7 +16,8 @@ CREATE SPACE [IF NOT EXISTS] <graph_space_name> (
     [replica_factor = <replica_number>,]
     vid_type = {FIXED_STRING(<N>) | INT[64]}
     )
-    [COMMENT = '<comment>'];
+    [COMMENT = '<comment>']
+    [ON <zone_list>'];
 ```
 
 |Parameter|Description|
@@ -27,10 +28,8 @@ CREATE SPACE [IF NOT EXISTS] <graph_space_name> (
 |`replica_factor`|Specifies the number of replicas in the cluster. The suggested number is 3 in a production environment and 1 in a test environment. The replica number must be an **odd number** for the need of quorum-based voting. The default value is 1.|
 |`vid_type`|A required parameter. Specifies the VID type in a graph space. Available values are `FIXED_STRING(N)` and `INT64`. `INT` equals to `INT64`. <br>``FIXED_STRING(<N>)` specifies the VID as a string, while `INT64` specifies it as an integer. `N` represents the maximum length of the VIDs. If you set a VID that is longer than `N` bytes, NebulaGraph throws an error. Note, for UTF-8 chars, the length may vary in different cases, i.e. a UTF-8 Chinese char is 3 byte, this means 11 Chinese chars(length-33) will exeed a FIXED_STRING(32) vid defination.|
 |`COMMENT`|The remarks of the graph space. The maximum length is 256 bytes. By default, there is no comments on a space.|
+|`zone_list`|Specify the list of Zones to which the graph space belongs. Partition replicas will be distributed across these Zones. The number of replicas cannot exceed the number of specified Zones. When `zone_list` is not specified, partition replicas are distributed across all Zones by default. For more information, see [Manage zones](../../4.deployment-and-installation/5.zone.md).|
 
-<!--
-|`zone_list`|Specifies the zone list to which space belongs. NebulaGraph will create partitions and replicas in these zones. The number of replicas can not exceed the number of zones. If `zone_list` is not specified, it belongs to all zones by default. For more information, see [Manage zone](../../4.deployment-and-installation/5.zone.md).|
--->
 
 !!! caution
 
