--- a/docs-2.0/5.configurations-and-logs/1.configurations/4.storage-config.md
+++ b/docs-2.0/5.configurations-and-logs/1.configurations/4.storage-config.md
@@ -117,7 +117,7 @@ For all parameters and their current values, see [Configurations](1.configuratio
 | `auto_remove_invalid_space` | `true` |After executing `DROP SPACE`, the specified graph space will be deleted. This parameter sets whether to delete all the data in the specified graph space at the same time. When the value is `true`, all the data in the specified graph space will be deleted at the same time.| Yes|
 | `num_io_threads` | `16` | The number of network I/O threads used to send RPC requests and receive responses. | Yes|
 |`num_max_connections`       |`0`              |Max active connections for all networking threads. 0 means no limit.<br/>Max connections for each networking thread = num_max_connections / num_netio_threads|No|
-| `num_worker_threads` | `32` | The number of worker threads for one RPC-based Storage service. | Yes|
+| `num_worker_threads` | `32` | The number of worker threads for one RPC-based Storage service. | No|
 | `max_concurrent_subtasks` | `10` | The maximum number of concurrent subtasks to be executed by the task manager. | Yes|
 | `snapshot_part_rate_limit` | `10485760` | The rate limit when the Raft leader synchronizes the stock data with other members of the Raft group. Unit: bytes/s. | Yes|
 | `snapshot_batch_size` | `1048576` | The amount of data sent in each batch when the Raft leader synchronizes the stock data with other members of the Raft group. Unit: bytes. | Yes|
