--- a/docs-2.0/backup-and-restore/nebula-br/2.compile-br.md
+++ b/docs-2.0/backup-and-restore/nebula-br/2.compile-br.md
@@ -109,7 +109,7 @@ In **each machine**, follow these steps:
         Before starting Agent, make sure that the Meta service has been started and Agent has read and write access to the corresponding NebulaGraph cluster directory and backup directory. 
 
   ```
-  sudo nohup ./agent --agent="<agent_node_ip>:8888" --meta="<metad_node_ip>:9559" > nebula_agent.log 2>&1 &
+  sudo nohup ./agent --agent="<agent_node_ip>:8888" --meta="<metad_node_ip>:9559" --ratelimit=<file_size_bt> > nebula_agent.log 2>&1 &
   ```
 
   - `--agent`: The IP address and port number of Agent.
