--- a/docs-2.0/nebula-operator/2.deploy-nebula-operator.md
+++ b/docs-2.0/nebula-operator/2.deploy-nebula-operator.md
@@ -20,7 +20,7 @@ Before installing NebulaGraph Operator, you need to install the following softwa
 
     - If using a role-based access control policy, you need to enable [RBAC](https://kubernetes.io/docs/admin/authorization/rbac) (optional).
 
-    - [CoreDNS](https://coredns.io/) is a flexible and scalable DNS server that is [installed](https://github.com/coredns/deployment/tree/master/kubernetes) for Pods in NebulaGraph clusters.
+    - [CoreDNS](https://coredns.io/) is a flexible and scalable DNS server that is [installed](https://github.com/coredns/helm) for Pods in NebulaGraph clusters.
 
 ## Steps
 
@@ -52,8 +52,7 @@ Before installing NebulaGraph Operator, you need to install the following softwa
   kubectl create namespace nebula-operator-system
   ```
 
-  - All the resources of NebulaGraph Operator are deployed in this namespace.
-  - You can also use a different name.
+  All the resources of NebulaGraph Operator are deployed in this namespace.
 
 4. Install NebulaGraph Operator.
    
@@ -138,11 +137,11 @@ Part of the above parameters are described as follows:
 | `imagePullSecrets`                     | -                               | The image pull secret in Kubernetes.                            |
 | `kubernetesClusterDomain`              | `cluster.local`                 | The cluster domain.                                |
 | `controllerManager.create`             | `true`                          | Whether to enable the controller-manager component.              |
-| `controllerManager.replicas`           | `2`                             | The numeric value of controller-manager replicas.                |
+| `controllerManager.replicas`           | `2`                             | The number of controller-manager replicas.                |
 | `admissionWebhook.create`              | `false`                          | Whether to enable Admission Webhook. This option is disabled. To enable it, set the value to `true` and you will need to install [cert-manager](https://cert-manager.io/docs/installation/helm/).             |
 | `shceduler.create`                     | `true`                          | Whether to enable Scheduler.                       |
 | `shceduler.schedulerName`              | `nebula-scheduler`              | The Scheduler name.                              |
-| `shceduler.replicas`                   | `2`                             | The numeric value of nebula-scheduler replicas.                  |
+| `shceduler.replicas`                   | `2`                             | The number of nebula-scheduler replicas.                  |
 
 You can run `helm install [NAME] [CHART] [flags]` to specify chart configurations when installing a chart. For more information, see [Customizing the Chart Before Installing](https://helm.sh/docs/intro/using_helm/#customizing-the-chart-before-installing).
 
