--- a/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md
+++ b/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md
@@ -57,17 +57,17 @@ The following example shows how to create a NebulaGraph cluster by creating a cl
     | Parameter    | Default value  | Description    |
     | :---- | :--- | :--- |
     | `metadata.name`              | -                                                            | The name of the created NebulaGraph cluster. |
-    | `spec.graphd.replicas`       | `1`                                                          | The numeric value of replicas of the Graphd service.         |
+    | `spec.graphd.replicas`       | `1`                                                          | The number of replicas of the Graphd service.         |
     | `spec.graphd.image`         | `vesoft/nebula-graphd`                                       | The container image of the Graphd service.      |
     | `spec.graphd.version`        | `{{nebula.tag}}`                                          | The version of the Graphd service.         |
     | `spec.graphd.service`        | -                                                            | The Service configurations for the Graphd service.      |
     | `spec.graphd.logVolumeClaim.storageClassName`   | -                                         | The log disk storage configurations for the Graphd service.         |
-    | `spec.metad.replicas`        | `1`                                                          | The numeric value of replicas of the Metad service.          |
+    | `spec.metad.replicas`        | `1`                                                          | The number of replicas of the Metad service.          |
     | `spec.metad.image`          | `vesoft/nebula-metad`                                        | The container image of the Metad service.        |
     | `spec.metad.version`         | `{{nebula.tag}}`                                          | The version of the Metad service.          |
     | `spec.metad.dataVolumeClaim.storageClassName`    | -                                        | The data disk storage configurations for the Metad service.          |
     | `spec.metad.logVolumeClaim.storageClassName`|-                                              | The log disk storage configurations for the Metad service.|
-    | `spec.storaged.replicas`     | `3`                                                          | The numeric value of replicas of the Storaged service.       |
+    | `spec.storaged.replicas`     | `3`                                                          | The number of replicas of the Storaged service.       |
     | `spec.storaged.image`       | `vesoft/nebula-storaged`                                     | The container image of the Storaged service.     |
     | `spec.storaged.version`      | `{{nebula.tag}}`                                          | The version of the Storaged service.       |
     | `spec.storaged.dataVolumeClaims.resources.requests.storage` | - | Data disk storage size for the Storaged service. You can specify multiple data disks to store data. When multiple disks are specified, the storage path is `/usr/local/nebula/data1`, `/usr/local/nebula/data2`, etc.|
@@ -209,7 +209,7 @@ The following shows how to scale out a NebulaGraph cluster by changing the numbe
 
 ### Scale in clusters
 
-The principle of scaling in a cluster is the same as scaling out a cluster. You scale in a cluster if the numeric value of the `replicas` in `apps_v1alpha1_nebulacluster.yaml` is changed smaller than the current number. For more information, see the **Scale out clusters** section above.
+The principle of scaling in a cluster is the same as scaling out a cluster. You scale in a cluster if the number of the `replicas` in `apps_v1alpha1_nebulacluster.yaml` is changed smaller than the current number. For more information, see the **Scale out clusters** section above.
 
 !!! caution
 
