--- a/docs-2.0/nebula-operator/8.custom-cluster-configurations/8.2.pv-reclaim.md
+++ b/docs-2.0/nebula-operator/8.custom-cluster-configurations/8.2.pv-reclaim.md
@@ -12,7 +12,7 @@ You have created a cluster. For how to create a cluster with Kubectl, see [Creat
 
 The following example uses a cluster named `nebula` and the cluster's configuration file named `nebula_cluster.yaml` to show how to set `enablePVReclaim`:
 
-1.  Run the following command to access the edit page of the `nebula` cluster.
+1.  Run the following command to edit the `nebula` cluster's configuration file.
    
   ```bash
   kubectl edit nebulaclusters.apps.nebula-graph.io nebula
