--- a/docs-2.0/3.ngql-guide/14.native-index-statements/5.show-native-index-status.md
+++ b/docs-2.0/3.ngql-guide/14.native-index-statements/5.show-native-index-status.md
@@ -2,7 +2,7 @@
 
 `SHOW INDEX STATUS` returns the name of the created tag or edge type index and its status of job.
 
-Status of refactoring indexes includes:
+The status of rebuilding indexes includes:
 
 - `QUEUE`: The job is in a queue.
 - `RUNNING`: The job is running.
