--- a/docs-2.0/nebula-dashboard-ent/4.cluster-operator/9.notification.md
+++ b/docs-2.0/nebula-dashboard-ent/4.cluster-operator/9.notification.md
@@ -40,7 +40,7 @@ Follow the below steps to create a custom rule.
     | Parameter     | Description                                                         |
     | -------- | ------------------------------------------------------------ |
     | Alert Name | Set a name for an alert rule. The name can only contain lowercase letters, numbers, and hyphens (`-`), and must begin and end with a lowercase letter or number. The name contains up to 253 characters.                                    |
-    | Severity | Set a severity level for an alert rule. The severity level includes `emergency`, `critical`, and `warning`. |
+    | Severity | Set a severity level for an alert rule. The severity level includes `emergency`, `critical`, `minor`, `warning`, and `info`. |
     | Alert Frequency | Set how often an alert message is sent. Unit: Minute (Min).                    |    
 
   2. On the **Condition** tab, set metric type, rule, and alert duration.
