--- a/docs-2.0/3.ngql-guide/9.space-statements/1.create-space.md
+++ b/docs-2.0/3.ngql-guide/9.space-statements/1.create-space.md
@@ -17,7 +17,6 @@ CREATE SPACE [IF NOT EXISTS] <graph_space_name> (
     vid_type = {FIXED_STRING(<N>) | INT[64]}
     )
     [COMMENT = '<comment>']
-    [ON <zone_list>'];
 ```
 
 |Parameter|Description|
@@ -28,7 +27,6 @@ CREATE SPACE [IF NOT EXISTS] <graph_space_name> (
 |`replica_factor`|Specifies the number of replicas in the cluster. The suggested number is 3 in a production environment and 1 in a test environment. The replica number must be an **odd number** for the need of quorum-based voting. The default value is 1.|
 |`vid_type`|A required parameter. Specifies the VID type in a graph space. Available values are `FIXED_STRING(N)` and `INT64`. `INT` equals to `INT64`. <br>``FIXED_STRING(<N>)` specifies the VID as a string, while `INT64` specifies it as an integer. `N` represents the maximum length of the VIDs. If you set a VID that is longer than `N` bytes, NebulaGraph throws an error. Note, for UTF-8 chars, the length may vary in different cases, i.e. a UTF-8 Chinese char is 3 byte, this means 11 Chinese chars(length-33) will exeed a FIXED_STRING(32) vid defination.|
 |`COMMENT`|The remarks of the graph space. The maximum length is 256 bytes. By default, there is no comments on a space.|
-|`zone_list`|Specify the list of Zones to which the graph space belongs. Partition replicas will be distributed across these Zones. The number of replicas cannot exceed the number of specified Zones. When `zone_list` is not specified, partition replicas are distributed across all Zones by default. For more information, see [Manage zones](../../4.deployment-and-installation/5.zone.md).|
 
 
 !!! caution
@@ -56,6 +54,17 @@ CREATE SPACE [IF NOT EXISTS] <graph_space_name> (
 !!! note
 
     `graph_space_name`, `partition_num`, `replica_factor`, `vid_type`, and `comment` cannot be modified once set. To modify them, drop the current working graph space with [`DROP SPACE`](./5.drop-space.md) and create a new one with `CREATE SPACE`.
+
+{{ent.ent_begin}}
+
+When creating a graph space, the system will automatically recognize the value of `--zone_list` in the Meta configuration file, which determines whether the Zone feature is enabled:
+
+  - If the value is empty, it means the Zone feature is not enabled. In this case, the graph space will be created without specifying Zones.
+  - If the value is not empty, and the number of Zones in `--zone_list` is equal to the number of replicas specified by `replica_factor`, the replicas of each partition in the graph space will be evenly distributed across the Zones specified in `--zone_list`. If the specified number of replicas is not equal to the number of Zones, the creation of the graph space will fail.
+
+For more details on Zones, see [Manage Zones](../../4.deployment-and-installation/5.zone.md).
+
+{{ent.ent_end}}
 
 ### Clone graph spaces
 
