--- a/docs-2.0/4.deployment-and-installation/5.zone.md
+++ b/docs-2.0/4.deployment-and-installation/5.zone.md
@@ -8,11 +8,19 @@ The Zone is a logical rack of storage nodes in a NebulaGraph cluster. It divides
 
 ## Principle
 
-Storage nodes can be added to a Zone. When creating a graph space, you can specify a list of Zones. The graph space is created and stored on the storage nodes added in these Zones. Partition replicas are evenly stored in the Zones, as shown in the following figure.
+Within NebulaGraph, you can set up multiple Zones, with each Zone containing one or more Storage nodes. When creating a graph space, the system automatically recognizes these set Zones and stores graph space data on the Storage nodes within these Zones.
+
+It's important to note that when creating a graph space, you need to specify the number of replicas for data partitioning. At this point, **the specified number of partition replicas and the number of set Zones must be equal, otherwise, the graph space cannot be created**. This is because NebulaGraph evenly stores each replica of the graph space data across these set Zones.
+
+Since each Zone contains a complete set of graph space data partitions, at least one Storage node is required within each Zone to store these data partitions.
+
+The partition replicas in NebulaGraph achieve strong consistency through the [Raft](../1.introduction/3.nebula-graph-architecture/4.storage-service.md#raft_1) protocol. It's recommended to use an odd number of partition replicas, and therefore, it's also suggested to set an odd number of Zones.
+
+Taking the following picture as an example, when creating a graph space, the data is partitioned into 3 partitions, with 3 replicas for each partition, and the number of Zones is also 3. Six machines starting the Storage service are paired up and added to these 3 Zones. When creating the graph space, NebulaGraph evenly stores each replica of the graph space data across zone1 to zone3, and each Zone contains a complete set of graph space data partitions (part_1 to part_3).
 
 ![Zone](https://docs-cdn.nebula-graph.com.cn/figures/zone1.png)
 
-In the above figure, the six machines with the running storage service are grouped in pairs and added to three Zones. When creating a graph space S1 with a partition replica number of 3 in these three Zones, these partition replicas are evenly stored in Zone1 ~ Zone3.
+To reduce traffic cost and bandwidth consumption of cross-Zone queries, you can configure the Graph service to access a specific single Zone. When the Graph service accesses a specific Zone, the Graph service will access the replica data in the specified Zone.
 
 ## Scenarios
 
@@ -20,25 +28,28 @@ In the above figure, the six machines with the running storage service are group
 - Rolling upgrade. You need to stop one or more servers to update them, and then put them into use again until all servers in the cluster are updated to the new version.
 - Cost saving. Allocate different graph spaces to different Zones, and control the client to access the replica data in the specified Zone to reduce traffic consumption and improve access efficiency.
 
-
 ## Notes
 
-- Make sure that the cluster is empty before enabling the Zone feature. To enable the Zone feature, see **Enable Zone** below.
-- A storage node can only belong to one Zone, but a Zone can contain multiple different storage nodes.
-- Deleting a Zone is not supported.
-- Modifying the name of a Zone is not supported.
+- Before enabling the Zone feature, clear any existing data in the cluster. See **Enabling Zone** for details.
+- Each Storage node must belong to one, and only one, Zone. However, a Zone can have multiple Storage nodes. Storage nodes should outnumber or equal Zones.
+- The number of Zones must equal the number of partition replicas; otherwise, the graph space cannot be created.
+- The number of Zones is recommended to be odd and must equal the number of partition replicas.
+- Adjusting the number of Zones isn't allowed.
+- Zone name modifications are unsupported.
 
 ## Enable Zone 
 
-1. In the configuration file `nebula-metad.conf` of the Meta service, manually add the `--zone_list` flag and set its value to Zone names to be added, such as `--assigned_zone=zone1, zone2, zone3`.
+1. In the configuration file `nebula-metad.conf` of the Meta service, set `--zone_list` to Zone names to be added, such as `--assigned_zone=zone1, zone2, zone3`.
 
   !!! danger
 
-        Once the value of `--zone_list` is configured and the Meta service is started, it cannot be modified, otherwise, the Meta service will fail to restart.
+        Once the value of `--zone_list` is configured and the Meta service is started, it cannot be modified, otherwise, the Meta service will fail to restart. 
 
   !!! note
 
-        If the name of a Zone contains special characters (excluding underscores), reserved keywords, or starts with a number, you need to enclose the Zone name in backticks (`) when specifying the Zone name in a query statement; the Zone name cannot contain English periods (.); multiple Zone names are separated by commas (,).
+      - The number of Zones specified in `--zone_list` is recommended to be odd and must be less than or equal to the number of Storage nodes. When `--zone_list` is empty, it indicates that the Zone feature is disabled.
+      - Consider the replica settings when setting the number of Zones, since the number of Zones should match the replica count. For example, with 3 replicas, you must have 3 Zones.
+      - If the name of a Zone contains special characters (excluding underscores), reserved keywords, or starts with a number, you need to enclose the Zone name in backticks (`) when specifying the Zone name in a query statement; the Zone name cannot contain English periods (.); multiple Zone names are separated by commas (,).
    
   For more information about the Meta configuration file, see [Meta service configuration](../5.configurations-and-logs/1.configurations/2.meta-config.md).
 
@@ -50,19 +61,19 @@ In the above figure, the six machines with the running storage service are group
 1. Enable the Zone feature. For details, see **Enable Zone** above.
 2. In the configuration file `nebula-graphd.conf` of the Graph service, add the following configuration:
   
-  1. Add the `--assigned_zone` field and set its value to the name of the Zone to be accessed, such as `--assigned_zone=zone1`.
+  1. Set the `--assigned_zone` to the name of the Zone to be accessed, such as `--assigned_zone=zone1`.
    
     !!! note
       
-      - Different Graph services can set different values for `--assigned_zone`, but the value of `--assigned_zone` must be one of the values in `--zone_list`.
-      - The value of `--assigned_zone` is a string and does not support English commas (,).
-      - When the value of `--assigned_zone` is empty, it indicates that all Zones are accessed.
+        - Different Graph services can set different values for `--assigned_zone`, but the value of `--assigned_zone` must be one of the values in `--zone_list`.
+        - The value of `--assigned_zone` is a string and does not support English commas (,).
+        - When the value of `--assigned_zone` is empty, it indicates that all Zones are accessed.
   
-  2. Set `--enable_intra_zone_routing=true` to enable the function of accessing the specified Zone.
+  2. Set `--prioritize_intra_zone_routing` to `true` to enable the function of accessing the specified Zone.
 
     !!! caution
 
-      It is recommended that the values of `--enable_intra_zone_routing` in different Graph services be consistent, otherwise, the load of Storage nodes will be unbalanced and unknown risks will occur.
+      It is recommended that the values of `--prioritize_intra_zone_routing` in different Graph services be consistent, otherwise, the load of Storage nodes will be unbalanced and unknown risks will occur.
 
   For details on the Graph configuration, see [Graph service configuration](../5.configurations-and-logs/1.configurations/3.graph-config.md).
 
@@ -84,14 +95,14 @@ nebula> SHOW ZONES;
 +--------+-----------------+------+
 | "az1"  | "192.168.8.111" | 9779 |
 | "az1"  | "192.168.8.112" | 9779 |
-| "az2"  | ""              | 0    |
-| "az3"  | ""              | 0    |
+| "az2"  | "192.168.8.113" | 9779 |
+| "az3"  | "192.168.8.114" | 9779 | 
 +--------+-----------------+------+
 ```
 
 !!! note
 
-    Run `SHOW ZONES` in the current graph space to view all Zone information, instead of the Zone information of the current graph spaces. The Zone information includes the name of the Zone, the IP address and the port number of the storage node in the Zone.
+    Run `SHOW ZONES` in the current graph space to view all Zone information. The Zone information includes the name of the Zone, the IP address and the port number of the storage node in the Zone.
 
 ### View the specified Zone
 
@@ -108,38 +119,17 @@ nebula> DESC ZONE az1
 | Hosts           | Port |
 +-----------------+------+
 | "192.168.8.111" | 7779 |
-| "192.168.8.111" | 9779 |
+| "192.168.8.112" | 9779 |
 +-----------------+------+
 ```
 
 ### Create a space in the specified Zone
 
-```ngql
-CREATE SPACE IF NOT EXISTS  (
-    [partition_num = <partition_number>,]
-    [replica_factor = <replica_number>,]
-    vid_type = {FIXED_STRING(<N>) | INT[64]}
-    )
-    [COMMENT = '<comment>'] 
-    [ON <zone_list>];
-```
+The syntax for creating a graph space within a Zone is the same as in [Creating Graph Space](../3.ngql-guide/9.space-statements/1.create-space.md). 
 
-!!! note
+However, during graph space creation, the system automatically recognizes the `--zone_list` value from the Meta configuration file. If this value is not empty and the number of Zones matches the partition replica count specified by `replica_factor`, the graph space's replicas will be evenly distributed across the Zones in `--zone_list`. If the specified replica count doesn't match the number of Zones, graph space creation will fail.
 
-    - The Zone specified when creating a graph space must be one or more of the values in the `--zone_list` of the Meta configuration file, otherwise the graph space cannot be created.
-    - The Zone specified when creating a graph space must contain at least one Storage node, otherwise the graph space cannot be created.
-    - The number of partition replicas specified when creating a graph space must be less than or equal to the number of Zones, otherwise, the graph space cannot be created.
-
-
-!!! caution
-
-    It is not recommended to create a graph space without specifying a Zone when the Zone feature is enabled and the Graph service is configured to access the specified Zone (set `--assigned_zone`). This will result in the inability to query the replica data distributed in other Zones because the Graph service will only access the replica data in the specified Zone, and creating a graph space without specifying a Zone will result in the distribution of replicas in other Zones.
-
-For example:
-
-```ngql
-nebula> CREATE SPACE IF NOT EXISTS my_space_1 (vid_type=FIXED_STRING(30)) on az1
-```
+If the value of `--zone_list` is empty, the Zone feature is not enabled, and the graph space will be created without specifying Zones.
 
 ### View the Zone to which the specified graph space belongs
 
@@ -161,8 +151,12 @@ nebula> DESC SPACE my_space_1
 ### Add Storage nodes to the specified Zone
 
 ```ngql
-ADD HOSTS <ip>:<port> [,<ip>:<port> ...] INTO ZONE <new_zone_name>;
+ADD HOSTS <ip>:<port> [,<ip>:<port> ...] INTO ZONE <zone_name>;
 ```
+
+- After enabling the Zone feature, you must include the `INTO ZONE` clause when executing the `ADD HOSTS` command; otherwise, adding a Storage node will fail.
+- A Storage node can belong to only one Zone, but a single Zone can encompass multiple different Storage nodes.
+
 
 For example: 
 
@@ -170,10 +164,29 @@ For example:
 nebula> ADD HOSTS 192.168.8.111:9779,192.168.8.112:9779 INTO ZONE az1;
 ```
 
-### Migrate data from the Storage nodes in the specified Zone to other Storage nodes 
+### Balance the Zone replicas
 
 ```ngql
-BALANCE IN ZONE REMOVE <ip>:<port> [,<ip>:<port> ...]
+BALANCE DATA IN ZONE;
+```
+
+!!! note
+
+    Specify a space before executing this command.
+
+After enabling the Zone feature, run `BALANCE DATA IN ZONE` to balance the partition replicas within each Zone.
+
+For example: 
+
+```ngql
+nebula> USE my_space_1;
+nebula> BALANCE IN ZONE;
+```
+
+### Migrate partitions from the Storage nodes in the specified Zones to other Storage nodes 
+
+```ngql
+BALANCE DATA IN ZONE REMOVE <ip>:<port> [,<ip>:<port> ...]
 ```
 
 !!! note
@@ -210,7 +223,8 @@ DROP HOSTS <ip>:<port> [,<ip>:<port> ...];
 
 !!! note
 
-    You cannot directly drop a Storage node that is in use. You need to first drop the associated graph space before dropping the Storage nodes. See [drop space](../3.ngql-guide/9.space-statements/5.drop-space.md) for details.
+    - You cannot directly drop a Storage node that is in use. You need to first drop the associated graph space before dropping the Storage nodes. See [drop space](../3.ngql-guide/9.space-statements/5.drop-space.md) for details.
+    - Make sure enough remaining Storage nodes to support the set Zones after removing a node, or the graph space will be unavailable.
 
 For example: 
 
@@ -218,20 +232,5 @@ For example:
 nebula> DROP HOSTS 192.168.8.111:9779;
 ```
 
-### Balance the data in the specified Zone
 
-```ngql
-BALANCE IN ZONE;
-```
-
-!!! note
-
-    Specify a space before executing this command.
-
-For example: 
-
-```ngql
-nebula> USE my_space_1;
-nebula> BALANCE IN ZONE;
-```
 
