--- a/docs-2.0/5.configurations-and-logs/1.configurations/2.meta-config.md
+++ b/docs-2.0/5.configurations-and-logs/1.configurations/2.meta-config.md
@@ -111,4 +111,10 @@ For all parameters and their current values, see [Configurations](1.configuratio
 |`ng_black_box_dump_period_seconds`    |`5`                     |The time interval for Nebula-BBox to collect metric data. Unit: Second.|  No|
 |`ng_black_box_file_lifetime_seconds`    |`1800`                     |Storage time for Nebula-BBox files generated after collecting metric data. Unit: Second.|  Yes|
 
+## Zone configurations
+
+| Name                 | Predefined Value                    | Description                              |Whether supports runtime dynamic modifications|
+| :-------------------- | :----- | :------------------- | :--------------------- |
+| `zone_list` | Empty | When the value is not empty, the Zone feature is enabled. For details, see [Manage Zones](../../4.deployment-and-installation/5.zone.md).| No  |
+
 {{ ent.ent_end }}
