--- a/docs-2.0/3.ngql-guide/4.job-statements.md
+++ b/docs-2.0/3.ngql-guide/4.job-statements.md
@@ -52,20 +52,22 @@ nebula> SUBMIT JOB BALANCE DATA REMOVE 192.168.8.100:9779;
 +------------+
 ```
 
-## SUBMIT JOB BALANCE IN ZONE [REMOVE]
+## SUBMIT JOB BALANCE DATA IN ZONE 
 
 !!! enterpriseonly
 
     Only available for the NebulaGraph Enterprise Edition.
 
-`SUBMIT JOB BALANCE IN ZONE` statement starts a job to balance the distribution of storage partitions in each zone in the current graph space. It returns the job ID.
+`SUBMIT JOB BALANCE DATA IN ZONE` statement starts a job to balance partition replicas within each Zone. It returns the job ID. 
 
-`SUBMIT JOB BALANCE IN ZONE REMOVE` statement starts a job to clear the partitions on specified Storage nodes in the zone in the current graph space. It returns the job ID. Before clearing the Storage nodes, make sure that the remaining Storage nodes in the zone can meet the set number of replicas. For example, if the number of replicas is set to 3, make sure that the remaining Storage nodes are greater than or equal to 3 before executing this command.
+<!-- To balance partition replicas within a specified Zone, you need to add the `<zone_name>` option.  -->
+
+For details on zones, see [Manage Zones](../4.deployment-and-installation/5.zone.md).
 
 For example:
 
 ```ngql
-# Balance the distribution of storage partitions in the current zones.
+# Balance partition replicas within each Zone in the current space.
 nebula> SUBMIT JOB BALANCE IN ZONE;
 +------------+
 | New Job Id |
@@ -74,17 +76,37 @@ nebula> SUBMIT JOB BALANCE IN ZONE;
 +------------+
 ```
 
+<!-- ```ngql
+# Balance partition replicas within a specified Zone.
+nebula> SUBMIT JOB BALANCE IN ZONE az1;
++------------+
+| New Job Id |
++------------+
+| 26         |
++------------+
+``` -->
+
+## SUBMIT JOB BALANCE DATA IN ZONE REMOVE
+
+!!! enterpriseonly
+
+    Only available for the NebulaGraph Enterprise Edition.
+
+`SUBMIT JOB BALANCE DATA IN ZONE REMOVE` statement starts a job to clear the partitions on specified Storage nodes in Zones in the current graph space. It returns the job ID. Before clearing the Storage nodes, make sure that the remaining Storage nodes in Zones can meet the set number of replicas. For example, if the number of replicas is set to 3, make sure that the remaining Storage nodes are greater than or equal to 3 before executing this command.
+
+For details on Zones, see [Manage Zones](../4.deployment-and-installation/5.zone.md).
+
+For example:
+
 ```ngql
-# Clear the partitions on the specified Storage nodes in the current zones. 
-nebula> SUBMIT JOB BALANCE IN ZONE REMOVE 192.168.10.102:9779;
+# Clear the partitions on the specified Storage nodes. 
+nebula> SUBMIT JOB BALANCE IN ZONE REMOVE 192.168.10.101:9779,192.168.10.102:9779;
 +------------+
 | New Job Id |
 +------------+
 | 26         |
 +------------+
 ```
-
-For details on zones, see [Manage Zones](../4.deployment-and-installation/5.zone.md).
 
 {{ ent.ent_end }}
 
