--- a/docs-2.0/4.deployment-and-installation/5.zone.md
+++ b/docs-2.0/4.deployment-and-installation/5.zone.md
@@ -131,7 +131,7 @@ However, during graph space creation, the system automatically recognizes the `-
 
 If the value of `--zone_list` is empty, the Zone feature is not enabled, and the graph space will be created without specifying Zones.
 
-### View the Zone to which the specified graph space belongs
+### Check the Zones for the specified graph space
 
 ```ngql
 DESC SPACE <space_name>;
