--- a/docs-2.0/5.configurations-and-logs/1.configurations/2.meta-config.md
+++ b/docs-2.0/5.configurations-and-logs/1.configurations/2.meta-config.md
@@ -115,6 +115,6 @@ For all parameters and their current values, see [Configurations](1.configuratio
 
 | Name                 | Predefined Value                    | Description                              |Whether supports runtime dynamic modifications|
 | :-------------------- | :----- | :------------------- | :--------------------- |
-| `zone_list` | Empty | When the value is not empty, the Zone feature is enabled. For details, see [Manage Zones](../../4.deployment-and-installation/5.zone.md).| No  |
+| `zone_list` | Empty | A list of Zone names. When the value is not empty, the Zone feature is enabled. For details, see [Manage Zones](../../4.deployment-and-installation/5.zone.md).| No  |
 
 {{ ent.ent_end }}
