--- a/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md
+++ b/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md
@@ -51,59 +51,108 @@ The following example shows how to create a NebulaGraph cluster by creating a cl
 
   - For a NebulaGraph Community cluster
   
-    Create a file named `apps_v1alpha1_nebulacluster.yaml`. For the file content, see the [sample configuration](https://github.com/vesoft-inc/nebula-operator/blob/v{{operator.release}}/config/samples/apps_v1alpha1_nebulacluster.yaml).
+    For the file content, see the [sample configuration](https://github.com/vesoft-inc/nebula-operator/blob/v{{operator.release}}/config/samples/apps_v1alpha1_nebulacluster.yaml).
 
-    The parameters in the file are described as follows:
+    ??? Info "Expand to show sample parameter descriptions"
 
-    | Parameter    | Default value  | Description    |
-    | :---- | :--- | :--- |
-    | `metadata.name`              | -                                                            | The name of the created NebulaGraph cluster. |
-    | `spec.graphd.replicas`       | `1`                                                          | The numeric value of replicas of the Graphd service.         |
-    | `spec.graphd.image`         | `vesoft/nebula-graphd`                                       | The container image of the Graphd service.      |
-    | `spec.graphd.version`        | `{{nebula.tag}}`                                          | The version of the Graphd service.         |
-    | `spec.graphd.service`        | -                                                            | The Service configurations for the Graphd service.      |
-    | `spec.graphd.logVolumeClaim.storageClassName`   | -                                         | The log disk storage configurations for the Graphd service.         |
-    | `spec.metad.replicas`        | `1`                                                          | The numeric value of replicas of the Metad service.          |
-    | `spec.metad.image`          | `vesoft/nebula-metad`                                        | The container image of the Metad service.        |
-    | `spec.metad.version`         | `{{nebula.tag}}`                                          | The version of the Metad service.          |
-    | `spec.metad.dataVolumeClaim.storageClassName`    | -                                        | The data disk storage configurations for the Metad service.          |
-    | `spec.metad.logVolumeClaim.storageClassName`|-                                              | The log disk storage configurations for the Metad service.|
-    | `spec.storaged.replicas`     | `3`                                                          | The numeric value of replicas of the Storaged service.       |
-    | `spec.storaged.image`       | `vesoft/nebula-storaged`                                     | The container image of the Storaged service.     |
-    | `spec.storaged.version`      | `{{nebula.tag}}`                                          | The version of the Storaged service.       |
-    | `spec.storaged.dataVolumeClaims.resources.requests.storage` | - | Data disk storage size for the Storaged service. You can specify multiple data disks to store data. When multiple disks are specified, the storage path is `/usr/local/nebula/data1`, `/usr/local/nebula/data2`, etc.|
-    | `spec.storaged.dataVolumeClaims.resources.storageClassName` | - | The data disk storage configurations for Storaged. If not specified, the global storage parameter is applied. |
-    | `spec.storaged.logVolumeClaim.storageClassName`|-                                           | The log disk storage configurations for the Storaged service.|
-    | `spec.storaged.enableAutoBalance` | `true` |Whether to balance data automatically. |
-    |`spec.agent`|`{}`| Configuration of the Agent service. This is used for backup and recovery as well as log cleanup functions. If you do not customize this configuration, the default configuration will be used.|
-    | `spec.reference.name`        | -                                                            | The name of the dependent controller.           |
-    | `spec.schedulerName`         | -                                                            | The scheduler name.                 |
-    | `spec.imagePullPolicy`       | The image policy to pull the NebulaGraph image. For details, see [Image pull policy](https://kubernetes.io/docs/concepts/containers/images/#image-pull-policy). | The image pull policy in Kubernetes.               |
-    |`spec.logRotate`| - |Log rotation configuration. For more information, see [Manage cluster logs](../8.custom-cluster-configurations/8.4.manage-running-logs.md).|
-    |`spec.enablePVReclaim`|`false`|Define whether to automatically delete PVCs and release data after deleting the cluster. For more information, see [Reclaim PVs](../8.custom-cluster-configurations/8.2.pv-reclaim.md).|
+        | Parameter    | Default value  | Description    |
+        | :---- | :--- | :--- |
+        | `metadata.name`              | -                                                            | The name of the created NebulaGraph cluster. |
+        | `spec.graphd.replicas`       | `1`                                                          | The numeric value of replicas of the Graphd service.         |
+        | `spec.graphd.image`         | `vesoft/nebula-graphd`                                       | The container image of the Graphd service.      |
+        | `spec.graphd.version`        | `{{nebula.tag}}`                                          | The version of the Graphd service.         |
+        | `spec.graphd.service`        | -                                                            | The Service configurations for the Graphd service.      |
+        | `spec.graphd.logVolumeClaim.storageClassName`   | -                                         | The log disk storage configurations for the Graphd service.         |
+        | `spec.metad.replicas`        | `1`                                                          | The numeric value of replicas of the Metad service.          |
+        | `spec.metad.image`          | `vesoft/nebula-metad`                                        | The container image of the Metad service.        |
+        | `spec.metad.version`         | `{{nebula.tag}}`                                          | The version of the Metad service.          |
+        | `spec.metad.dataVolumeClaim.storageClassName`    | -                                        | The data disk storage configurations for the Metad service.          |
+        | `spec.metad.logVolumeClaim.storageClassName`|-                                              | The log disk storage configurations for the Metad service.|
+        | `spec.storaged.replicas`     | `3`                                                          | The numeric value of replicas of the Storaged service.       |
+        | `spec.storaged.image`       | `vesoft/nebula-storaged`                                     | The container image of the Storaged service.     |
+        | `spec.storaged.version`      | `{{nebula.tag}}`                                          | The version of the Storaged service.       |
+        | `spec.storaged.dataVolumeClaims.resources.requests.storage` | - | Data disk storage size for the Storaged service. You can specify multiple data disks to store data. When multiple disks are specified, the storage path is `/usr/local/nebula/data1`, `/usr/local/nebula/data2`, etc.|
+        | `spec.storaged.dataVolumeClaims.resources.storageClassName` | - | The data disk storage configurations for Storaged. If not specified, the global storage parameter is applied. |
+        | `spec.storaged.logVolumeClaim.storageClassName`|-                                           | The log disk storage configurations for the Storaged service.|
+        | `spec.storaged.enableAutoBalance` | `true` |Whether to balance data automatically. |
+        |`spec.agent`|`{}`| Configuration of the Agent service. This is used for backup and recovery as well as log cleanup functions. If you do not customize this configuration, the default configuration will be used.|
+        | `spec.reference.name`        | -                                                            | The name of the dependent controller.           |
+        | `spec.schedulerName`         | -                                                            | The scheduler name.                 |
+        | `spec.imagePullPolicy`       | The image policy to pull the NebulaGraph image. For details, see [Image pull policy](https://kubernetes.io/docs/concepts/containers/images/#image-pull-policy). | The image pull policy in Kubernetes.               |
+        |`spec.logRotate`| - |Log rotation configuration. For more information, see [Manage cluster logs](../8.custom-cluster-configurations/8.4.manage-running-logs.md).|
+        |`spec.enablePVReclaim`|`false`|Define whether to automatically delete PVCs and release data after deleting the cluster. For more information, see [Reclaim PVs](../8.custom-cluster-configurations/8.2.pv-reclaim.md).|
 
   {{ ent.ent_begin }}
 
   - For a NebulaGraph Enterprise cluster
 
+    Contact our sales team to get a complete NebulaGraph Enterprise Edition cluster YAML example.
+
     !!! enterpriseonly
 
         Make sure that you have access to NebulaGraph Enterprise Edition images before pulling the image. 
 
-    Create a file named `apps_v1alpha1_nebulacluster.yaml`. Contact our sales team to get a complete NebulaGraph Enterprise Edition cluster YAML example. You must customize and modify the following parameters, and other parameters can be changed as needed.
+    === "Cluster without Zones"
 
-    - `spec.metad.licenseManagerURL`
-    - `spec.<graphd|metad|storaged>.image`
-    - `spec.imagePullSecrets`
+        You must set the following parameters in the configuration file for the enterprise edition. Other parameters can be changed as needed. For information on other parameters, see the [sample configuration](https://github.com/vesoft-inc/nebula-operator/blob/v{{operator.release}}/config/samples/apps_v1alpha1_nebulacluster.yaml). 
 
-    The parameters only for NebulaGraph Enterprise Edition are described as follows:
+
+        | Parameter    | Default value  | Description    |
+        | :---- | :--- | :--- |
+        | `spec.metad.licenseManagerURL` | - | Configure the URL that points to the LM, which consists of the access address and port number (default port `9119`) of the LM. For example, `192.168.8.100:9119`. **You must configure this parameter in order to obtain the license information; otherwise, the enterprise edition cluster cannot be used.** |
+        |`spec.<graphd|metad|storaged>.image`|-|The container image of the Graph, Meta, or Storage service of the enterprise edition.|
+        |`spec.imagePullSecrets`| - |Specifies the Secret for pulling the NebulaGraph Enterprise service images from a private repository.|
+
+
+    === "Cluster with Zones"
+
+        NebulaGraph Operator supports creating a cluster with [Zones](../../4.deployment-and-installation/5.zone.md). You need to set the following parameters for creating a cluster with Zones are as follows. Other parameters can be changed as needed. For more information on other parameters, see the [sample configuration](https://github.com/vesoft-inc/nebula-operator/blob/v{{operator.release}}/config/samples/apps_v1alpha1_nebulacluster.yaml). 
+
+
+        | Parameter    | Default value  | Description    |
+        | :---- | :--- | :--- |
+        | `spec.metad.licenseManagerURL` | - | Configure the URL that points to the LM, which consists of the access address and port number (default port `9119`) of the LM. For example, `192.168.8.100:9119`. **You must configure this parameter in order to obtain the license information; otherwise, the enterprise edition cluster cannot be used.** |
+        |`spec.<graphd|metad|storaged>.image`|-|The container image of the Graph, Meta, or Storage service of the enterprise edition.|
+        |`spec.imagePullSecrets`| - |Specifies the Secret for pulling the NebulaGraph Enterprise service images from a private repository.|
+        |`spec.alpineImage`|`reg.vesoft-inc.com/nebula-alpine:latest`|The Alpine Linux image, used to obtain the Zone information where nodes are located.| 
+        |`spec.metad.config.zone_list`|-|A list of zone names, split by comma.|
+        |`spec.graphd.config.enable_intra_zone_routing`|`false`|Specifies whether to prioritize sending queries to the storage nodes in the same zone.<br/>When set to `true`, the query is sent to the storage nodes in the same zone. If no data is available in that Zone, it will decide based on `stick_to_intra_zone_on_failure` whether to read data from other Zones. |
+        |`spec.graphd.config.stick_to_intra_zone_on_failure`|`false`|Specifies whether to stick to intra-zone routing if unable to find the requested partitions in the same zone. When set to `true`, if no data is available in that Zone, it does not read data from other Zones.|
+
+        ??? Info "Expand to see partial configurations"
+
+            ```yaml
+            apiVersion: apps.nebula-graph.io/v1alpha1
+            kind: NebulaCluster
+            metadata:
+              name: nebula
+              namespace: default
+            spec:
+              # Alpine image built with linux tools.
+              alpineImage: "reg.vesoft-inc.com/nebula-alpine:latest"
+              graphd:
+                config:
+                  # Prioritize sending queries to the storage nodes in the same zone.
+                  enable_intra_zone_routing: "true"
+                  # Stick to intra-zone routing if unable to
+                  # find the requested part in the zone when set to true.
+                  stick_to_intra_zone_on_failure: "true"
+                ...
+              metad:
+                config:
+                  # A list of zones, split by comma
+                  zone_list: az1,az2,az3
+                licenseManagerURL: "192.168.8.53:9119"
+                ...  
+            ```
+
+    Other optional parameters for the enterprise edition are as follows:
 
     | Parameter    | Default value  | Description    |
     | :---- | :--- | :--- |
-    | `spec.metad.licenseManagerURL` | - | Configure the URL that points to the LM, which consists of the access address and port number (default port `9119`) of the LM. For example, `192.168.8.100:9119`. **You must configure this parameter in order to obtain the license information; otherwise, the enterprise edition cluster cannot be used.** |
     |`spec.storaged.enableAutoBalance`| `false`| Specifies whether to enable automatic data balancing. For more information, see [Balance storage data after scaling out](../8.custom-cluster-configurations/8.3.balance-data-when-scaling-storage.md).|
     |`spec.enableBR`|`false`|Specifies whether to enable the BR tool. For more information, see [Backup and restore](../10.backup-restore-using-operator.md).|
-    |`spec.imagePullSecrets`| - |Specifies the Secret for pulling the NebulaGraph Enterprise service images from a private repository.|
+
 
 
   {{ ent.ent_end }}
