--- a/docs-2.0/4.deployment-and-installation/5.zone.md
+++ b/docs-2.0/4.deployment-and-installation/5.zone.md
@@ -10,17 +10,17 @@ The Zone is a logical rack of storage nodes in a NebulaGraph cluster. It divides
 
 Within NebulaGraph, you can set up multiple Zones, with each Zone containing one or more Storage nodes. When creating a graph space, the system automatically recognizes these set Zones and stores graph space data on the Storage nodes within these Zones.
 
-It's important to note that when creating a graph space, you need to specify the number of replicas for data partitioning. At this point, **the specified number of partition replicas and the number of set Zones must be equal, otherwise, the graph space cannot be created**. This is because NebulaGraph evenly stores each replica of the graph space data across these set Zones.
+It's important to note that when creating a graph space, you need to specify the number of replicas for data partitioning. At this point, **the specified number of partition replicas and the number of set Zones must be equal, otherwise, the graph space cannot be created**. This is because NebulaGraph evenly distributes the replicas of every graph space partition across these set Zones.
 
 Since each Zone contains a complete set of graph space data partitions, at least one Storage node is required within each Zone to store these data partitions.
 
 The partition replicas in NebulaGraph achieve strong consistency through the [Raft](../1.introduction/3.nebula-graph-architecture/4.storage-service.md#raft_1) protocol. It's recommended to use an odd number of partition replicas, and therefore, it's also suggested to set an odd number of Zones.
 
-Taking the following picture as an example, when creating a graph space, the data is partitioned into 3 partitions, with 3 replicas for each partition, and the number of Zones is also 3. Six machines starting the Storage service are paired up and added to these 3 Zones. When creating the graph space, NebulaGraph evenly stores each replica of the graph space data across zone1 to zone3, and each Zone contains a complete set of graph space data partitions (part_1 to part_3).
+Taking the following picture as an example, when creating a graph space, the data is partitioned into 3 partitions, with 3 replicas for each partition, and the number of Zones is also 3. Six machines hosting the Storage service are paired up and added to these 3 Zones. When creating the graph space, NebulaGraph stores the 3 replicas of each partition evenly across zone1, zone2, and zone3, and each Zone contains a complete set of graph space data partitions (Part1, Part2, and Part3).
 
-![Zone](https://docs-cdn.nebula-graph.com.cn/figures/zone1.png)
+<img src="https://docs-cdn.nebula-graph.com.cn/figures/core_zone_230913.png" width="800" alt="example_for_zones">
 
-To reduce traffic cost and bandwidth consumption of cross-Zone queries, you can configure the Graph service to access a specific single Zone. When the Graph service accesses a specific Zone, the Graph service will access the replica data in the specified Zone.
+To reduce cost of cross-Zone network traffic, and increase data transfer speed (Intra-zone network usually has a lower latency than inter-zone network), you can configure the Graph service to prioritize intra zone data access. Each Graphd will then prioritize to access the partition replica in the same zone as specified by Graphd if there is any.
 
 ## Scenarios
 
@@ -39,7 +39,7 @@ To reduce traffic cost and bandwidth consumption of cross-Zone queries, you can 
 
 ## Enable Zone 
 
-1. In the configuration file `nebula-metad.conf` of the Meta service, set `--zone_list` to Zone names to be added, such as `--assigned_zone=zone1, zone2, zone3`.
+1. In the configuration file `nebula-metad.conf` of the Meta service, set `--zone_list` to Zone names to be added, such as `--zone_list=zone1, zone2, zone3`.
 
   !!! danger
 
@@ -49,31 +49,31 @@ To reduce traffic cost and bandwidth consumption of cross-Zone queries, you can 
 
       - The number of Zones specified in `--zone_list` is recommended to be odd and must be less than or equal to the number of Storage nodes. When `--zone_list` is empty, it indicates that the Zone feature is disabled.
       - Consider the replica settings when setting the number of Zones, since the number of Zones should match the replica count. For example, with 3 replicas, you must have 3 Zones.
-      - If the name of a Zone contains special characters (excluding underscores), reserved keywords, or starts with a number, you need to enclose the Zone name in backticks (`) when specifying the Zone name in a query statement; the Zone name cannot contain English periods (.); multiple Zone names are separated by commas (,).
+      - If the name of a Zone contains special characters (excluding underscores), reserved keywords, or starts with a number, you need to enclose the Zone name in backticks (`) when specifying the Zone name in a query statement; the Zone name cannot contain English periods (.); multiple Zone names must be separated by commas (,).
    
   For more information about the Meta configuration file, see [Meta service configuration](../5.configurations-and-logs/1.configurations/2.meta-config.md).
 
 2. Restart the Meta service.
 
 
-## Specify the Zone to be accessed by the Graph service
+## Specify intra Zone data access
 
 1. Enable the Zone feature. For details, see **Enable Zone** above.
 2. In the configuration file `nebula-graphd.conf` of the Graph service, add the following configuration:
   
-  1. Set the `--assigned_zone` to the name of the Zone to be accessed, such as `--assigned_zone=zone1`.
+  1. Set the `--assigned_zone` to the name of the Zone where the Graphd is assigned, such as `--assigned_zone=zone1`.
    
     !!! note
       
-        - Different Graph services can set different values for `--assigned_zone`, but the value of `--assigned_zone` must be one of the values in `--zone_list`.
+        - Different Graph services can set different values for `--assigned_zone`, but the value of `--assigned_zone` must be one of the values in `--zone_list`. In production, it is recommended to use the actual zone that a Graphd locates to reduce management complexity. Of course, it must be within the `zone_list`. Otherwise, intra zone reading may not take effect.
         - The value of `--assigned_zone` is a string and does not support English commas (,).
-        - When the value of `--assigned_zone` is empty, it indicates that all Zones are accessed.
+        - When the value of `--assigned_zone` is empty, it means reading from leader replicas or throwing an error (depending on the flag `stick_to_intra_zone_on_failure`).
   
   2. Set `--prioritize_intra_zone_routing` to `true` to enable the function of accessing the specified Zone.
 
     !!! caution
 
-      It is recommended that the values of `--prioritize_intra_zone_routing` in different Graph services be consistent, otherwise, the load of Storage nodes will be unbalanced and unknown risks will occur.
+        It is recommended that the values of `--prioritize_intra_zone_routing` in different Graph services be consistent, otherwise, the load of Storage nodes will be unbalanced and unknown risks will occur.
 
   For details on the Graph configuration, see [Graph service configuration](../5.configurations-and-logs/1.configurations/3.graph-config.md).
 
@@ -100,9 +100,7 @@ nebula> SHOW ZONES;
 +--------+-----------------+------+
 ```
 
-!!! note
-
-    Run `SHOW ZONES` in the current graph space to view all Zone information. The Zone information includes the name of the Zone, the IP address and the port number of the storage node in the Zone.
+Run `SHOW ZONES` in the current graph space to view all Zone information. The Zone information includes the name of the Zone, the IP address and the port number of the storage node in the Zone.
 
 ### View the specified Zone
 
